Fixed asset viewer's view point Added Shader auto reassignment Fixed cache scanner Made it so results in cache scanner are also in avatar full view.

--- a/SARS/SARS.csproj
+++ b/SARS/SARS.csproj
@@ -124,6 +124,7 @@
     <Compile Include="Modules\AvatarFunctions.cs" />
     <Compile Include="Modules\CacheScanner.cs" />
     <Compile Include="Modules\ConfigSave.cs" />
+    <Compile Include="Modules\FixVRCMaterials.cs" />
     <Compile Include="Modules\FixVRC3Scripts.cs" />
     <Compile Include="Modules\GenerateHtml.cs" />
     <Compile Include="Modules\GrabModel.cs" />
