--- a/SARS/packages.config
+++ b/SARS/packages.config
@@ -1,9 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="ICSharpCode.SharpZipLib.dll" version="0.85.4.369" targetFramework="net48" />
   <package id="MaterialSkin.2" version="2.3.1" targetFramework="net48" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Core" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.EF6" version="1.0.118.0" targetFramework="net48" />
+  <package id="System.Data.SQLite.Linq" version="1.0.118.0" targetFramework="net48" />
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net48" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net48" />
