Fixed an issue with downloading from local cache after avatar scanning.

--- a/VRChatAPI-New/VRChatAPI-New.csproj
+++ b/VRChatAPI-New/VRChatAPI-New.csproj
@@ -63,6 +63,7 @@
     <Compile Include="Modules\Game\Login.cs" />
     <Compile Include="Modules\Game\SARSGameClient.cs" />
     <Compile Include="Modules\Game\VRCA.cs" />
+    <Compile Include="Modules\SHOpenFolderAndSelectItems.cs" />
     <Compile Include="StartUp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StaticUnityValues.cs" />
