--- a/SARS/SARS.csproj
+++ b/SARS/SARS.csproj
@@ -161,6 +161,7 @@
     <Compile Include="Modules\MessageBoxManager.cs" />
     <Compile Include="Modules\ProgressBar.cs" />
     <Compile Include="Modules\RandomFunctions.cs" />
+    <Compile Include="Modules\SarsClient.cs" />
     <Compile Include="Modules\SHOpenFolderAndSelectItems.cs" />
     <Compile Include="Modules\ShrekApi.cs" />
     <Compile Include="Modules\SQLite.cs" />
