--- a/SARS/SARS.csproj
+++ b/SARS/SARS.csproj
@@ -146,6 +146,7 @@
     <Compile Include="Models\CacheAvatar.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\DatabaseStats.cs" />
+    <Compile Include="Models\FileSizeUpdate.cs" />
     <Compile Include="Models\MatchModel.cs" />
     <Compile Include="Models\VRCCacheScannerModel.cs" />
     <Compile Include="Models\VRChatCacheResultWorld.cs" />
