--- a/SARS/SARS.csproj
+++ b/SARS/SARS.csproj
@@ -186,6 +186,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="AvatarSystem.resx">
       <DependentUpon>AvatarSystem.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Download.resx">
       <DependentUpon>Download.cs</DependentUpon>
