--- a/SARS/SARS.csproj
+++ b/SARS/SARS.csproj
@@ -104,6 +104,9 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
+    <Reference Include="YamlDotNet, Version=13.0.0.0, Culture=neutral, PublicKeyToken=ec19458f3c15af5e, processorArchitecture=MSIL">
+      <HintPath>..\packages\YamlDotNet.13.1.1\lib\net47\YamlDotNet.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Avatar Info.cs">
@@ -146,7 +149,9 @@
     <Compile Include="Models\CacheAvatar.cs" />
     <Compile Include="Models\Config.cs" />
     <Compile Include="Models\DatabaseStats.cs" />
+    <Compile Include="Models\DownloadQueueList.cs" />
     <Compile Include="Models\FileSizeUpdate.cs" />
+    <Compile Include="Models\GetRequests.cs" />
     <Compile Include="Models\MatchModel.cs" />
     <Compile Include="Models\VRCCacheScannerModel.cs" />
     <Compile Include="Models\VRChatCacheResultWorld.cs" />
@@ -167,6 +172,7 @@
     <Compile Include="Modules\ShrekApi.cs" />
     <Compile Include="Modules\SQLite.cs" />
     <Compile Include="Modules\StreamReader.cs" />
+    <Compile Include="Modules\UnityPack.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SARS.cs">
