--- a/SARS/packages.config
+++ b/SARS/packages.config
@@ -13,4 +13,5 @@
   <package id="System.IO.Compression.ZipFile" version="4.3.0" targetFramework="net48" />
   <package id="WindowsAPICodePack-Core" version="1.1.1" targetFramework="net48" />
   <package id="WindowsAPICodePack-Shell" version="1.1.1" targetFramework="net48" />
+  <package id="YamlDotNet" version="13.1.1" targetFramework="net48" />
 </packages>
