have to ignore AR file 2 big.

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,4 @@ FodyWeavers.xsd
 /CoreSystem/Properties/AssemblyInfo.cs
 /CoreSystem/Model/UserKey.cs
 /CoreSystem/packages.config
+/SARS/AssetRipperConsole_win64/AssetRipper.exe
