--- a/SARS/packages.config
+++ b/SARS/packages.config
@@ -3,6 +3,7 @@
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="ICSharpCode.SharpZipLib.dll" version="0.85.4.369" targetFramework="net48" />
   <package id="MetroModernUI" version="1.4.0.0" targetFramework="net48" />
+  <package id="NetSpell" version="2.1.7" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net48" />
   <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.118.0" targetFramework="net48" />
   <package id="System.Data.SQLite" version="1.0.118.0" targetFramework="net48" />
