--- a/.gitignore
+++ b/.gitignore
@@ -415,3 +415,4 @@ FodyWeavers.xsd
 /CoreSystem/ProgressBar.cs
 /CoreSystem/StreamReader.cs
 /CoreSystem/Translate.cs
+/SARS/AssetRipperConsole_win64/AssetRipper.zip
