--- a/SARS/ARC.csproj
+++ b/SARS/ARC.csproj
@@ -200,79 +200,32 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="AssetRipperConsole_win64\Licenses\AsmResolver.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\AssetStudio.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\Avalonia.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\Cpp2IL.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\Crunch.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\darkfx.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\Fmod5Sharp.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\ILSpy.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\ImageSharp.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\LibVLCSharp.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\Lz4.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\MessageBoxAvalonia.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\MonoCecil.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\NAudio.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\NAudioVorbis.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\NVorbis.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\SharpCompress.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\SharpGLTF.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\SharpZipLib.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\Smolv.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\SpirV.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\texgenpack.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\uTinyRipper.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\uTinyRipperExporter.md">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </None>
-    <None Include="AssetRipperConsole_win64\Licenses\Xiph.md">
+    <None Include="AssetRipperConsole_win64\Licenses\AsmResolver.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\AssetStudio.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\Avalonia.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\Cpp2IL.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\Crunch.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\darkfx.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\Fmod5Sharp.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\ILSpy.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\ImageSharp.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\LibVLCSharp.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\Lz4.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\MessageBoxAvalonia.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\MonoCecil.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\NAudio.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\NAudioVorbis.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\NVorbis.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\SharpCompress.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\SharpGLTF.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\SharpZipLib.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\Smolv.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\SpirV.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\texgenpack.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\uTinyRipper.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\uTinyRipperExporter.md" />
+    <None Include="AssetRipperConsole_win64\Licenses\Xiph.md" />
+    <None Include="Assets\AssetRipper.zip">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="en-US.dic">
@@ -311,21 +264,11 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="AssetRipperConsole_win64\AssetRipper.exe">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="AssetRipperConsole_win64\capstone.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="AssetRipperConsole_win64\crunch.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="AssetRipperConsole_win64\crunchunity.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="AssetRipperConsole_win64\Texture2DDecoderNative.dll">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
+    <Content Include="AssetRipperConsole_win64\AssetRipper.exe" />
+    <Content Include="AssetRipperConsole_win64\capstone.dll" />
+    <Content Include="AssetRipperConsole_win64\crunch.dll" />
+    <Content Include="AssetRipperConsole_win64\crunchunity.dll" />
+    <Content Include="AssetRipperConsole_win64\Texture2DDecoderNative.dll" />
     <Content Include="css\bootstrap.min.css">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
